Code syntax highlighter added

--- a/_posts/django-crash-course.mdx
+++ b/_posts/django-crash-course.mdx
@@ -1,11 +1,11 @@
 ---
-title: 'Django Crash Course'
-date: 'May 5, 2021'
-excerpt: 'Django is a very powerful, high level Python framework for building web applications'
-cover_image: '/images/posts/img3.jpg'
-category: 'Python'
-author: 'Sam Smith'
-author_image: 'https://randomuser.me/api/portraits/men/12.jpg'
+title: "Django Crash Course"
+date: "May 5, 2021"
+excerpt: "Django is a very powerful, high level Python framework for building web applications"
+cover_image: "/images/posts/img3.jpg"
+category: "Python"
+author: "Sam Smith"
+author_image: "https://randomuser.me/api/portraits/men/12.jpg"
 ---
 
 <!-- Markdown generator - https://jaspervdj.be/lorem-markdownum/ -->
@@ -31,7 +31,7 @@ Phoebus, manus _partibus poenas_. Sola armos adhuc; chaos agit ora manifesta
 procul fugitque corpora iugales!
 
     var ethics_font_drive = cycleSystemProgram + deprecatedTransferIp.ide(3) /
-            rgb + nybbleBaseband;
+    rgb + nybbleBaseband;
     permalinkCertificateMacintosh(ergonomicsIsdnDns);
     boot = bridgeDaemonActive;
 
@@ -60,3 +60,7 @@ capillos ego rapi Bootes, sculpsit. Protinus sibi denique sibi primum Acheloides
 ante exspectant gaudeat Calydonius cernit, duxit pariterque dolet epulis? Nostri
 visae nisi aeripedes stant quem saepibus cannis protectus candens praestet:
 porrigar **patriam** Alcmene: attonitas.
+
+```javascript
+console.log("Hello World");
+```
