--- a/_posts/javascript-performance-tips.mdx
+++ b/_posts/javascript-performance-tips.mdx
@@ -1,11 +1,11 @@
 ---
-title: 'JavaScript Performance Tips'
-date: 'May 4, 2021'
-excerpt: 'We will look at 10 simple tips and tricks to increase the speed of your code when writing JS'
-cover_image: '/images/posts/img1.jpg'
-category: 'JavaScript'
-author: 'John Doe'
-author_image: 'https://randomuser.me/api/portraits/men/11.jpg'
+title: "JavaScript Performance Tips"
+date: "May 4, 2021"
+excerpt: "We will look at 10 simple tips and tricks to increase the speed of your code when writing JS"
+cover_image: "/images/posts/img1.jpg"
+category: "JavaScript"
+author: "John Doe"
+author_image: "https://randomuser.me/api/portraits/men/11.jpg"
 ---
 
 <!-- Markdown generator - https://jaspervdj.be/lorem-markdownum/ -->
@@ -57,3 +57,19 @@ sub!
 Institerat quantum facies parientem, crepitantis nondum. Atque atris arcebat
 factis nil Lucina mori sinu est partibus specie, imo interea tellus luctu
 inmunitamque genus Amphitryoniaden?
+
+```javascript
+class Node {
+  constructor(value) {
+    this.value = value;
+    this.next = null;
+  }
+}
+class Stack {
+  constructor() {
+    this.top = null;
+    this.bottom = null;
+    this.length = 0;
+  }
+}
+```
