--- a/_posts/django-crash-course.mdx
+++ b/_posts/django-crash-course.mdx
@@ -4,8 +4,10 @@ date: "May 5, 2021"
 excerpt: "Django is a very powerful, high level Python framework for building web applications"
 cover_image: "/images/posts/img3.jpg"
 category: "Python"
-author: "Sam Smith"
-author_image: "https://randomuser.me/api/portraits/men/12.jpg"
+author:
+  name: Sam Smith
+  avatar: /assets/authors/tarek_ahmed.jpg
+  github: prime7
 ---
 
 <!-- Markdown generator - https://jaspervdj.be/lorem-markdownum/ -->
