Added sidebar in blog post detail

--- a/_posts/django-crash-course.mdx
+++ b/_posts/django-crash-course.mdx
@@ -5,12 +5,10 @@ excerpt: "Django is a very powerful, high level Python framework for building we
 cover_image: "/images/posts/img3.jpg"
 category: "Python"
 author:
-  name: Sam Smith
+  name: Tarek Ahmed
   avatar: /assets/authors/tarek_ahmed.jpg
   github: prime7
 ---
-
-<!-- Markdown generator - https://jaspervdj.be/lorem-markdownum/ -->
 
 Lorem markdownum fine incustoditam unda factura versum occuluere Aeneas, iuvat
 haec praepes [partes epulae](http://cui.com/), in egisse de. Caecisque ter
