added pagination, sidebar

--- a/_posts/django-crash-course.mdx
+++ b/_posts/django-crash-course.mdx
@@ -2,7 +2,7 @@
 title: "Django Crash Course"
 date: "May 5, 2021"
 excerpt: "Django is a very powerful, high level Python framework for building web applications"
-cover_image: "/images/posts/img3.jpg"
+cover_image: "/assets/posts/img1.jpg"
 category: "Python"
 author:
   name: Tarek Ahmed
