updated readme and added css for responsive image in blog post detail

--- a/_posts/django-crash-course.mdx
+++ b/_posts/django-crash-course.mdx
@@ -27,6 +27,8 @@ Queues.
 Stacks work as LIFO - Last In First Out
 Queues work as FIFO - First In First Out
 
+<img src="/assets/posts/img1.jpg" alt="AS" />
+
 # Stacks <a name="stack"></a>
 
 A stack is a container of objects that are inserted and removed according to the last-in first-out (LIFO) principle.
