added next image component to mdx

--- a/_posts/django-crash-course.mdx
+++ b/_posts/django-crash-course.mdx
@@ -27,7 +27,7 @@ Queues.
 Stacks work as LIFO - Last In First Out
 Queues work as FIFO - First In First Out
 
-<img src="/assets/posts/img1.jpg" alt="AS" />
+<Image src="/assets/posts/img1.jpg" alt="image alt text" />
 
 # Stacks <a name="stack"></a>
 
